--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,54 @@ node_modules
 # CDK asset staging directory
 .cdk.staging
 cdk.out
+
+# Environment variables
+.env
+**/.env
+lambda/.DS_Store
+package-lock.json
+# Environment variables
+.env
+**/.env
+
+# Node.js
+node_modules/
+npm-debug.log
+yarn-error.log
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
+lms_venv/*
+
+# CDK
+.cdk.staging
+cdk.out
+bin/*.js
+lib/*.js
+bin/*.d.ts
+lib/*.d.ts
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+
